# DocumentFiller

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/DocumentFiller/: DocFillerFactory.py  DocFillerFamily.py  DocxFiller.py  OdtFiller.py  XlsxFiller.py  __init__.py  __main__.py  main.py
src/tests/: test_DocFillerFactory.py  test_DocxFiller.py  test_OdtFiller.py  test_XlsxFiller.py  test_main.py
src/tests/documents/: Flags1.json  Test1.clean.goal.odt  Test1.clean.odt  Test1.docx  Test1.goal.docx  Test1.goal.odt  Test1.goal.xlsx  Test1.odt  Test1.xlsx  docx 1 Goal document.xml  docx 1 document.xml  docx 1 goal remove tags document.xml  docx 1 remove tags document.xml  xlsx 1 Goal sharedStrings.xml  xlsx 1 sharedStrings.xml
