[metadata]
name = DocumentFiller
version = 0.1
author = Whisp ltd
author_email = mathieu.boudot@viacesi.fr
description = Library for automated filling of different document files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whisphealth/DocumentFiller
project_urls =
    Bug Tracker = https://github.com/whisphealth/DocumentFiller/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    odfpy >= 1.4.1
    lxml >= 4.6.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    DocumentFiller = DocumentFiller:main.main